# loci

./: .gitignore  ISSUES_LIST.md  LICENSE  README.md  pyproject.toml
.claude/: install-hooks.sh
.claude/hooks/: loci-agent-inject.sh  loci-enforce-read.py  loci-session-start.sh
.codex/: install-hooks.py
.codex/hooks/: loci-session-start.sh
.shared/: loci-mcp-wrapper.sh  loci-session-start-core.sh  loci-wrapper.sh
benchmarks/: __init__.py  graph_anchor_stage3.py  graph_traversal_stage4.py
docs/: semble_to_loci_summary.md
docs/design/: 2026-03-09-file-grep-batch-get-design.md  2026-03-10-evaluator.md  2026-03-11-auto-summarize-design.md  2026-03-11-telemetry-analyze-design.md  2026-06-10-graph-layer-design.md  2026-06-13-markdown-indexing-design.md  2026-06-23-mcp-native-loci-design.md  2026-07-13-extensible-graph-retrieval-design.md  2026-07-22-mcp-harness-store-isolation.md
docs/plans/: 2026-03-09-file-grep-batch-get.md  2026-03-10-evaluator-design.md  2026-06-24-loci-mcp-maintenance-surface-cleanup.md  2026-06-24-markdown-parser-tsl-pack-upgrade.md  2026-07-01-import-dependency-graph.md  2026-07-07-markdown-section-aware-retrieval.md  2026-07-07-markdown-wiki-metadata-search.md  2026-07-13-extensible-graph-retrieval-stage-1.md  (+9 more)
tasks/: plan.md  todo.md
tests/: conftest.py  test_call_mcp.py  test_call_service.py  test_claude_hooks.py  test_cli.py  test_codex_hooks.py  test_enforce_read_hook.py  test_integration.py  test_mcp_server.py  test_service.py  test_symbol_reference_mcp.py  test_symbol_reference_service.py  test_wrapper_routing.py
(+99 files in other folders)
