[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loci"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter-language-pack>=0.7.0",
    "pathspec>=0.11",
    "mcp>=1.27,<2",
    "PyYAML>=6",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
loci = "loci.cli:main"
loci-mcp = "loci.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/loci"]

[tool.pytest.ini_options]
testpaths = ["tests"]
